welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
		case _ => if (!estFaceMur) recule;
                                           ^SlugTracking:6: error: type mismatch;
 found   : Unit
 required: Boolean
		case _ => if (!estFaceMur) recule;
                          ^