welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    // Write your code here
	if (!estFaceMur) avance;
	getCouleurSol() match{
		case _ => if (!estFaceMur) recule;
		case Color.green => return true
	}
}